D0280/network-security-tls/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-security-tls
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
