D0280/network-security-tls/01-app-plaintext.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plain-app
  namespace: network-security-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plain-app
  template:
    metadata:
      labels:
        app: plain-app
    spec:
      containers:
        - name: quay.io/redhattraining/hello-world-nginx
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: plain-app-svc
  namespace: network-security-tls
spec:
  selector:
    app: plain-app
  ports:
    - port: 8080
      targetPort: 8080
