D0280/network-security-tls/02-app-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-svc
  namespace: network-security-tls
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: secure-app-certs
spec:
  selector:
    app: secure-app
  ports:
    - port: 8443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
  namespace: network-security-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-app
  template:
    metadata:
      labels:
        app: secure-app
    spec:
      containers:
        - name: nginx
          image: quay.io/redhattraining/nginx
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: certs
              mountPath: /etc/nginx/certs
              readOnly: true
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: certs
          secret:
            secretName: secure-app-certs
        - name: config
          configMap:
            name: secure-nginx-conf
