D0280/network-security-tls/10-route-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-1-edge
  namespace: network-security-tls
spec:
  host: edge-route-network-security-tls.apps.ocp4.example.com
  to:
    kind: Service
    name: plain-app-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEAzCCAuugAwIBAgIUDs/YXtE2QSHzpFPCjQ3pXKt4SWowDQYJKoZIhvcNAQEL
[...]
      vZA9vnjeFAiKrGB/v+E/m1BBLmDC6Y4=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCpXBJciCKuEP+w
[...]
      6QY3xv2pk/wPnxhNpuvFYFG1
      -----END PRIVATE KEY-----
